# duma

./: .cvsignore  .deepsource.toml  .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG  CHANGELOG.md  CHANGES  CMakeLists.txt  DUMALib.dsp  DUMALib.dsw  DUMALibHeaders.pro  DUMALibSources.pro  EFenceLib.db  EFenceLib.dsp  EFenceLib.dsw  EFenceLib.pro  EFenceLibHeaders.pro  GNUmakefile  INSTALL  LICENSE  Makefile  README  README.md  README.txt  SECURITY.md  TODO  VERSION  WIN32_DETOURS_HOWTO.txt  builddocs.bat  createconf.c  createconf_new.cpp  duma.3  duma.c  duma.h  duma.sh  duma.sh.in  duma_config.h  duma_hlp.h  duma_sem.h  (+45 more)
.github/workflows/: checkmarx-analysis.yml  codacy-analysis.yml  codeql-analysis.yml  codeql.yml  codescan-analysis.yml  crunch42-analysis.yml  fortify-analysis.yml  ossar-analysis.yml  shiftleft-analysis.yml  veracode-analysis.yml  xanitizer-analysis.yml
Attic/: WIN32_DETOURS_HOWTO.txt  builddocs.bat  mkclean.bat  refactoring.sh
Attic/detoursexample1/: detoursexample1.cpp  stdafx.cpp
Attic/dumadetours/: dumadetours.cpp  stdafx.cpp  stdafx.h
Attic/dumadetoursdll/: stdafx.cpp  stdafx.h
Attic/kduma/: README.txt  builddocs.bat  createconf.c  kduma.c  kduma.h  log.h  paging.h
comparisons/: README.txt
comparisons/ex11/: Makefile  wrong1.c
comparisons/ex12/: Makefile
comparisons/ex13/: Makefile
comparisons/ex14/: wrong7.c
comparisons/ex17/: Makefile  ok5.c
comparisons/ex21/: Makefile
comparisons/ex22/: wrong2.cc
comparisons/ex25/: wrong5.cc
comparisons/ex26/: Makefile  wrong6.cc
comparisons/ex28/: leak2.cc
comparisons/ex29/: Makefile  ok5.cc
comparisons/memCheckers-Dateien/: boringstyle.css  jpstyle.css
confdir/: CMakeLists.txt
debian/: README.debian  changelog  control  copyright  dirs  docs  rules  watch
debian/source/: lintian-overrides
detours/: readme.txt
detoursexample1/: detoursexample1.cpp  stdafx.cpp
doc/Data/: FileInfo.nd  PreviousMenuState.nd
docs/: index.html
docs-data/: Menu.txt
docs-data/Data/: ConfigFileInfo.nd  FileInfo.nd  PreviousMenuState.nd  PreviousSettings.nd  SymbolTable.nd
dumadetours/: dumadetours.cpp  stdafx.cpp
dumadetoursdll/: dumadetoursdll.cpp  stdafx.cpp
dumadll/: dumadll.cpp  dumadll.def  resource.h  stdafx.cpp  stdafx.h
example_makes/ex1/: Makefile
example_makes/ex2/: Makefile
example_makes/ex3/: Makefile
example_makes/ex4/: Makefile
example_makes/ex5/: Makefile
example_makes/ex6/: Makefile
examples/: example1.cpp  example2.cpp  example3.cpp  example4.cpp  example5.cpp  example6.cpp  example7.cpp  example8.cpp
kduma/: README.txt  createconf.c  kduma.c  kduma.h  log.h  paging.h
kduma/docs/: index.html
kduma/docs-data/: Menu.txt
src/: duma.c  dumapp.cpp  print.c  sem_inc.c
stacktrace/: Copy of stacktrace.dsp  Copy of stacktrace.dsw  printStackTrace.cpp  printStackTrace.h  stacktrace.ncb  stacktrace.opt  stacktrace.plg  stacktrace.vcproj
stacktrace/doc/: printStackTrace.html
stacktrace/internal/: Array.h  MapFile.cpp  MapFile.h  MapFileEntry.cpp  MapFileEntry.h  StackTrace.cpp  StackTrace.h  TextFile.cpp  TextFile.h
stacktrace/lib/: stacktraced.lib
stacktrace/linux-i386/: printStackTrace.c
stacktrace/test/: main.cpp  test.dsp  test.plg
tests/: dumatest.c  dumatestpp.cpp  testmt.c  testoperators.cpp  thread-test.c  tstheap.c
tests/experimental/: test-sysconf-availpages.c  test-sysconf-availpages.sh  test-sysconf.c  testalloc0.cpp  testalloc0.sh  testenv.c  testmallozero.c  testmemlimit.c  testmemlimit.sh  testsems.cpp
win32-devcpp/: createconf.dev  dumalib.dev  dumalib.mak  dumatest.dev  dumatest.mak  efencelib.dev  efencelib.mak  eftest.dev  eftest.mak  tstheap.dev  tstheap.mak
win32-msvc/: duma.dsw  efence.dsw
win32-msvc.2005/: duma.sln
win32-msvc.2005/createconf/: createconf.vcproj
win32-msvc.2005/detoursexample1/: detoursexample1.sln
win32-msvc.2005/dumadetours/: dumadetours.vcproj
win32-msvc.2005/dumadetoursdll/: dumadetoursdll.vcproj  test.bat
win32-msvc.2005/dumadll/: dumadll.vcproj
win32-msvc.2005/dumalib/: dumalib.vcproj
win32-msvc.2005/dumatest/: dumatest.vcproj
win32-msvc.2005/dumatestpp/: dumatestpp.vcproj
win32-msvc.2005/example1/: example1.ncb  example1.sln  example1.vcproj
win32-msvc.2005/example2/: example2.ncb  example2.sln  example2.vcproj
win32-msvc.2005/example3/: example3.sln  example3.vcproj
win32-msvc.2005/example4/: example4.sln  example4.vcproj
win32-msvc.2005/example5/: example5.vcproj
win32-msvc.2005/example6/: example6.vcproj
win32-msvc.2005/quicktest/: quicktest.vcproj
win32-msvc.2005/stacktrace/: ReadMe.txt  stacktrace.vcproj
win32-msvc.2005/tstheap/: tstheap.vcproj
win32-msvc.net/: duma.ncb  duma.sln
win32-msvc.net/createconf/: createconf.vcproj
win32-msvc.net/detoursexample1/: detoursexample1.ncb  detoursexample1.sln
win32-msvc.net/dumadetours/: ReadMe.txt  dumadetours.vcproj  stdafx.cpp
win32-msvc.net/dumadetoursdll/: ReadMe.txt  dumadetoursdll.cpp  dumadetoursdll.vcproj
win32-msvc.net/dumadll/: ReadMe.txt  dumadll.aps  dumadll.cpp  dumadll.def  dumadll.vcproj  stdafx.cpp  stdafx.h
win32-msvc.net/dumalib/: dumalib.vcproj
win32-msvc.net/dumatest/: dumatest.vcproj
win32-msvc.net/dumatestpp/: dumatestpp.vcproj
win32-msvc.net/example1/: example1.sln  example1.vcproj
win32-msvc.net/example2/: example2.sln  example2.vcproj
win32-msvc.net/example3/: example3.sln  example3.vcproj
win32-msvc.net/example4/: example4.sln  example4.vcproj
win32-msvc.net/example5/: example5.sln  example5.vcproj
win32-msvc.net/example6/: example6.sln  example6.vcproj
win32-msvc.net/quicktest/: ReadMe.txt  quicktest.cpp  quicktest.vcproj  stdafx.cpp  stdafx.h
win32-msvc.net/stacktrace/: stacktrace.vcproj
win32-msvc.net/testenv/: testenv.vcproj
win32-msvc.net/testmt/: testmt.vcproj
win32-msvc.net/testoperators/: testoperators.vcproj
win32-msvc.net/tstheap/: tstheap.vcproj
win32-msvc/createconf/: createconf.dsp
win32-msvc/dumadetours/: dumadetours.dsp  dumadetours.plg
win32-msvc/dumadetoursdll/: dumadetoursdll.dsp  dumadetoursdll.plg
(+94 files in other folders)
